# mzjd-rs

./: Cargo.toml
cli/: Cargo.toml
cli/src/: main.rs
mzjd-lib/: Cargo.toml
mzjd-lib/src/: lib.rs
patchman/: Cargo.toml
patchman/src/: main.rs
