[package]
name = "patchman"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.26", default-features = false, features = [
    "blocking",
    "json",
    "default-tls",
] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = { version = "1.0.114", features = ["preserve_order"] }
mzjd = { path = "../mzjd-lib" }
